<resources>
    <!--APP-->
    <string name="app_name">Login Client</string>
    <string name="app_creator">Mobile App Club BITS Goa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--HOME-->
    <string name="title_activity_login_logout">Home</string>
    <string name="checkbox_rem_cred">Remember Credentials</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_logout">LOGOUT</string>

    <!--CREDENTIALS-->
    <string name="title_activity_credentials">Credentials</string>

    <!--PREVIOUS CONNECTIONS-->
    <string name="title_activity_prev_conn">Previous Connections</string>

    <!--SETTINGS-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_auto_login">Auto Login</string>
    <string name="pref_description_auto_login">
        You will be automatically logged in if you connect to a trusted WiFi Network
    </string>
    <string name="pref_title_auto_id_switch">Auto Id Switch</string>
    <string name="pref_description_auto_id_switch">
        User ids will be automatically switched if default ids data has exhausted
    </string>
    <string name="pref_title_change_password">Change Password</string>
    <string name="pref_url_change_password">http://www.google.com</string>
    <string name="pref_title_adv_set">Advanced Settings</string>
    <string name="pref_description_adv_set">
        Only for Pro users :P
    </string>

    <!--ABOUT-->
    <string name="title_activity_about">About</string>
    <string name="text_about_1">
        Login Client is a simple android app (yet hackable to the core) that automatically logs you into to WiFi Networks. The app is an Advanced Version of the popular app BPGC Login with many bug fixes and new features.
    </string>
    <string name="text_about_2">
        Login Client is completely Open Source and is hosted on Github
    </string>
    <string name="text_about_3">
        View Source Code
    </string>
    <string name="title_activity_indiv_ssid">IndivSSIDActivity</string>
    <string name="title_activity_indiv_url">IndivUrlActivity</string>
    <string name="colon">:</string>
    <string name="parameters_text">PARAMETERS :</string>
    <string name="url_hint">http://www.google.com</string>
    <string name="username_text">username</string>
    <string name="from_login_screen">&#160;&#160;<![CDATA[<From Login Screen>]]></string>
    <string name="url_text">URL :</string>
    <string name="password_text">password</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="insecure_connection">Insecure Connection</string>
    <string name="on_successful_request">ON SUCCESSFUL REQUEST :</string>
    <string name="execute_next_request_if">Execute Next Request If</string>
    <string name="regex">regex</string>
    <string name="result">Result :</string>
    <string name="save">SAVE</string>
    <string name="title_activity_sample">Sample</string>
    <string name="pref_title_light_theme_switch">Switch to Light Theme</string>

</resources>
