<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_activity_login_logout" />
    <item
        android:id="@+id/nav_credentials"
        android:icon="@drawable/ic_menu_credentials"
        android:title="@string/title_activity_credentials" />
    <item
        android:id="@+id/nav_prev_conn"
        android:icon="@drawable/ic_menu_prev_conn"
        android:title="@string/title_activity_prev_conn" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/title_activity_settings" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/title_activity_about" />

</menu>